--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
 
     <div class="book-page">
         <h1 class="page-title">Капибары-пираты!</h1>
-
+        <div class="illustration">
+            <img src="../images/title_img.png" alt="Капибары-пираты" />
+        </div>
         <div class="page-content">
 
 
