--- a/story1/receipt.html
+++ b/story1/receipt.html
@@ -27,26 +27,26 @@
 
 
         <div class="page-content">
-            <p>Способ которым Доктор заваривает кофе очень похож на "Кофе по вьетнамски". Вы и сами можете попробовать
+            <p>Способ которым Доктор заваривает кофе очень похож на «Кофе по вьетнамски». Вы и сами можете попробовать
                 сделать
                 такой кофе. Для этого вам понадобится:
             <ul>
                 <li>Молотый кофе. Лучше всего бодрящаяя робуста!</li>
-                <li>Вьетнаский пресс-фильтр "Фин".</li>
-                <li>Сгущенное молоко</li>
+                <li>Вьетнаский пресс-фильтр «Фин».</li>
+                <li>Сгущённое молоко</li>
                 <li>Горячая вода</li>
             </ul>
             </p>
 
             <p>
-                Готовится это так: берем кружку, наливаем на дно 1-2 столовые ложки сгущенного молока, сверху ставим наш
+                Готовится это так: берем кружку, наливаем на дно 1-2 столовые ложки сгущённого молока, сверху ставим наш
                 фильтр.
                 В фильтр сыпем молотый кофе до отсечки фильтра, а затем прижимаем его прессом. После этого заливаем
-                горячей водой, закрываем крышкой и ждем пока прокапает. Когда весь кофе окажется в кружке, снимаем
+                горячей водой, закрываем крышкой и ждём, пока прокапает. Когда весь кофе окажется в кружке, снимаем
                 фильтр и перемешиваем.
             </p>
 
-            <p>Полученный кофе сладкий как свежая шишка и крепкий как ругань Капи-тана!</p>
+            <p>Получается кофе сладкий как свежая шишка и крепкий как ругань Капи-тана!</p>
         </div>
 
 
