--- a/story2/page10.html
+++ b/story2/page10.html
@@ -43,7 +43,7 @@
                 <p>Ну как это что, <span class="insight"> пискнула Нутри, </span> сегодня помогаем бедным, а завтра —
                     голодным. Наша Кхельга
                     всегда
-                    говорит "Лучшая лакрица — арбуз без водицы". Она такая мудрая! <span class="insight"> тут она
+                    говорит «Лучшая лакрица — арбуз без водицы». Она такая мудрая! <span class="insight"> тут она
                         заметила, что арбуз
                         Боцмана
                         остался нетронутыми, </span> Ой, а вы же в первый раз. Давайте я вам покажу, что нужно делать.
@@ -51,10 +51,10 @@
             </div>
 
             <p>Она ловко схватила арбуз в свои маленькие лапки и быстро-быстро защелкала зубами. От арбуза откололась
-                долька. Нутри стала быстро вытаскивать из нее семечки, приговаривая "Это сюда, это сюда, а это — туда".
-                Долька без семечек отправилась направо. Нутри сама не заметила, как очистила оба арбуза. "Ой, простите,
+                долька. Нутри стала быстро вытаскивать из нее семечки, приговаривая «Это сюда, это сюда, а это — туда».
+                Долька без семечек отправилась направо. Нутри сама не заметила, как очистила оба арбуза. «Ой, простите,
                 я
-                что-то увлеклась. Давайте я принесу вам еще арбузы". На этих словах она словно испарилась, а за спиной
+                что-то увлеклась. Давайте я принесу вам еще арбузы». На этих словах она словно испарилась, а за спиной
                 Боцмана появилась Кхельга.</p>
 
             <div class="speech">
