--- a/story2/page11.html
+++ b/story2/page11.html
@@ -37,7 +37,7 @@
             <div class="speech">
                 <p>Пу-пу-пу... Давай для начала вечером сходим на встречу, а там уже и решим.</p>
                 <p>Но Боцман, от нас же хотят чтобы мы всех накормили. Спрашивать будут. Что мы им ответим?</p>
-                <p>Ну значит накормим. Давай, пацан, хватай арбуз, нас ждут добрые дела.</p>
+                <p>Ну, значит, накормим. Давай, пацан, хватай арбуз, нас ждут добрые дела.</p>
             </div>
 
             <p>Но добрые дела их совсем не ждали. Сначала Боцман с Антоном пытались найти голодных на улице. Но почему
@@ -50,7 +50,7 @@
 
             <div class="speech">
                 <p>Вы по какоооому вопросу?</p>
-                <p>Мы по вопросу нуждающихся. Вы - нуждающаяся? <span> уверенно спросил Боцман. Бабушка
+                <p>Мы по вопросу нуждающихся. Вы — нуждающаяся? <span> уверенно спросил Боцман. Бабушка
                         оживилась.</span></p>
                 <p>Смотря чаво вы предлагаете.</p>
                 <p>Мы предлагаем радикальное решение проблемы голода. Сочный арбуз! <span>на слове арбуз бабушку
