--- a/story2/page13.html
+++ b/story2/page13.html
@@ -95,13 +95,13 @@
                     почему-то
                     жителям острова это не нравится, у нас ничего не получается и госпожа Кхельга всегда остается
                     недовольна.</p>
-                <p>Так может это.. пускай нуждающиеся сами будут приходить и говорить, что им нужно? Зачем седлать
+                <p>Так может это... пускай нуждающиеся сами будут приходить и говорить, что им нужно? Зачем седлать
                     дохлую
                     лошадь, хе-хе-хе.</p>
                 <p>Мистер Боцман, а вы уверены? <span class="insight"> испуганно спросила Нутри, </span> а вдруг
                     нуждающиеся не поймут, что они
                     нуждаются и не придут. А вдруг какие-нибудь жулики придут просто так получать помощь?</p>
-                <p>Не боись! <span class="insight"> уверенно ответил Боцман, </span> ты ж у нас учена, вон академии
+                <p>Не боись! <span class="insight"> уверенно ответил Боцман, </span> ты ж у нас учёна, вон академии
                     заканчивала. Вас же
                     там
                     обучали
