--- a/story2/page14.html
+++ b/story2/page14.html
@@ -28,7 +28,7 @@
         <div class="page-content">
             <p>Следующим утром Боцман собрал зверей, чтобы представить им новую концепцию общины острова Черепа: единое
                 окно для помощи. На полянке посреди деревни поставили большую ширму с окошком. На ширме висела крупная
-                надпись "ПАМАГАЕМ КАМУ НУЖНА", а внизу мелким шрифтом написано "А КАМУ НЕ НУЖНА НЕ ПАМАГАЕМ".
+                надпись «ПАМАГАЕМ КАМУ НУЖНА», а внизу мелким шрифтом написано «А КАМУ НЕ НУЖНА НЕ ПАМАГАЕМ».
                 Демонстрировать инновационный метод помощи было поручено Антону. А Боцман вместе с остальными зверями,
                 спрятались за ширмой, наблюдали и давали подсказки.</p>
 
@@ -64,7 +64,7 @@
                     эти! Тьфу!</p>
             </div>
 
-            <p>"Эти" за ширмой заметно приуныли, а бабушка удалилась, похрустывая консервированными персиками. Услышав
+            <p>«Эти» за ширмой заметно приуныли, а бабушка удалилась, похрустывая консервированными персиками. Услышав
                 крик
                 бабушки, к единому окну подошел стареньких крот с палочкой.</p>
 
@@ -77,9 +77,9 @@
                         конверт, </span> а я слепой совсем стал. Не поможешь прочитать?</p>
             </div>
 
-            <p>Антон развернул письмо и прочитал вслух "АБЩИНА ОСТРАВА ЧЕРЕПА ВЫБРАЛА ВАС ДЛЯ ПОМАЩИ БЕДНЫМ. ПРИХАДИТЕ
+            <p>Антон развернул письмо и прочитал вслух «АБЩИНА ОСТРАВА ЧЕРЕПА ВЫБРАЛА ВАС ДЛЯ ПОМАЩИ БЕДНЫМ. ПРИХАДИТЕ
                 НА
-                АБЩЕСТВЕННУЮ ПЛАЩАДКУ И ПАЛУЧИТЕ СВАИ 50 МАНЕТ"</p>
+                АБЩЕСТВЕННУЮ ПЛАЩАДКУ И ПАЛУЧИТЕ СВАИ 50 МАНЕТ»</p>
 
             <div class="speech">
                 <p>Ох-ох, опять эти со своими арбузными семками. С тех пор, как эти дундуки начали их за лакрицу
