--- a/story2/page15.html
+++ b/story2/page15.html
@@ -39,8 +39,8 @@
                 <p>Вы не понимаете! Я человек! Но мне никто не верит! <span class="insight"> возмущенно размахивал
                         лапами медоед </span> Тогда я
                     решил
-                    сходить к доктору, чтобы тот подтвердил, что медоед я только снаружи. А он мне такой "дышите-не
-                    дышите",
+                    сходить к доктору, чтобы тот подтвердил, что медоед я только снаружи. А он мне такой «дышите-не
+                    дышите»,
                     потом засунул мне что-то в ухо, а потом кааааак даст по коленке. И говорит, что совсем не человек и
                     что мне
                     нужно есть меньше шишек.</p>
@@ -57,10 +57,10 @@
                     </span> я и сам человек,
                     просто
                     сейчас чуть больше капибара.</p>
-                <p>Я так и знал! Получается эти шишки тут не причём? <span> с этими словами медоед достал из штанов
+                <p>Я так и знал! Получается эти шишки тут ни при чём? <span> с этими словами медоед достал из штанов
                         мешок
                         шишек.</span></p>
-                <p>Конечно не причём! Шишки еще никому не вредили.</p>
+                <p>Конечно ни при чём! Шишки еще никому не вредили.</p>
                 <p>Ещё как вредили, <span>вмешалась ширма с голосом Боцмана. Медоед выпучил глаза.</span></p>
                 <p>Поэтому я их конфискую, <span>не растерялся Антон и потянулся за мешком.</span></p>
             </div>
@@ -88,7 +88,7 @@
                         пискнула Нутри.</span></p>
                 <p>У остальных — заслуженные выходные, а ты малая, раз теперь не такая занятая, можешь и с нами
                     поехать. Нам
-                    на судне ученый моряк не помешает.</p>
+                    на судне учёный моряк не помешает.</p>
                 <p>Простите, мистер Боцман, не могу я с вами поехать, <span class="insight"> Нутри потупила взгляд,
                     </span> я же как на первом
                     курсе с
@@ -105,7 +105,7 @@
                 <p>Я бы с радостью!</p>
                 <p>Ну тогды мы тебя по пути на корабль в Ар-р-р-р-р-рстралию подбросим. Только смотри мне, чтобы в этот
                     раз
-                    не бросала! Через пять лет вернусь и проверю.</p>
+                    доучилась! Через пять лет вернусь и проверю.</p>
             </div>
 
             <p>Нутри радостно захлопала в ладошки и побежала собираться.</p>
