--- a/story2/page16.html
+++ b/story2/page16.html
@@ -28,15 +28,15 @@
                 шлюпку чемоданы Нутри и мешок с подарками для Капи-тана и отчалили от берега. Совсем скоро они увидели
                 очертания Ар-р-р-р-р-рстралии и сломанную пополам табличку, приглашающую сократить путь через
                 Ар-р-р-р-р-р-р-рстралийский канал. Прямо возле этой таблички друзья и высадили Нутри. Принцесса помахала
-                лапкой на прощание, пискнула "До встречи через пять лет, мистер Боцман!" и убежала вглубь острова.</p>
+                лапкой на прощание, пискнула «До встречи через пять лет, мистер Боцман!» и убежала вглубь острова.</p>
 
             <p>Шлюпка двигалась дальше вглубь Ар-р-р-рстралийского канала. На первый взгляд, кораблей в пробке как будто
                 и
                 правда стало меньше и двигались они значительно быстрее. Вдруг друзья услышали громкий скрежет и
                 увидели,
                 как какая-то неведомая сила хватает застрявший на повороте корабль и направляет его в нужную сторону. На
-                всякий случай, Боцман оплыл судно по широкой дуге и вскоре их шлюпка добрались до знакомого "Совершенно
-                точно не пиратского корабля", который уже практически выехал из канала.</p>
+                всякий случай, Боцман оплыл судно по широкой дуге и вскоре их шлюпка добрались до знакомого «Совершенно
+                точно не пиратского корабля», который уже практически выехал из канала.</p>
 
             <p>Антон немного опасался встречи с Капи-таном, который вряд ли был в восторге от того, как прошли последние
                 три дня. Но к своему удивлению, на корабле они обнаружили сонную, объевшуюся команду, целую кучу
@@ -54,10 +54,10 @@
                     воды,
                     пролетела над кораблём и осыпала нас сочными, сладкими арбузами. Они, по правде говоря, все побились
                     о
-                    палубу, но разве это имеет значение. Я ей кричу "Постой, не уходи, останься!", а она мне <span
-                        class="khelga">"КАКОЕ
+                    палубу, но разве это имеет значение. Я ей кричу «Постой, не уходи, останься!», а она мне <span
+                        class="khelga">«КАКОЕ
                         ОСТАНЬСЯ,
-                        ТАМ ЕЩЕ ПОЛ КАНАЛА ТАКИХ НЕДОТЕП КАК ВЫ"</span> и упрыгала вдаль.</p>
+                        ТАМ ЕЩЕ ПОЛ КАНАЛА ТАКИХ НЕДОТЕП КАК ВЫ»</span> и упрыгала вдаль.</p>
             </div>
 
             <p>Вдруг Капи-тан встряхнул головой и продолжил в своей обычной манере.</p>
