--- a/story2/page2.html
+++ b/story2/page2.html
@@ -57,17 +57,21 @@
                 шрамом на глазу выглядел совершенно невозмутимым:</p>
 
             <div class="speech">
-                <p>Так это ж чихающие киты, <span class="insight"> глаза всей команды разом устремились на Боцмана, и
-                        тот, почувствовав себя
-                        в
-                        центре внимания с удовольствием завел одну из своих баек </span> О-о-о-о-ох! Это было много лет
+                <p>Так это ж чихающие киты!</p>
+            </div>
+
+            <p>Глаза всей команды разом устремились на Боцмана, и тот, почувствовав себя
+                в
+                центре внимания, с удовольствием завел одну из своих баек</p>
+            <div class="speech">
+                <p> О-о-о-о-ох! Это было много лет
                     назад,
                     помню как
                     сейчас! Тогда-то я и получил свой шрам.... Мы с прошлой командой направлялись в сторону игрунского
                     королевства, плыли мы как раз через эти воды и попали в абсолютный штиль. А потом ррррррраз море от
                     так от
                     как сейчас начало колыхаться и из вод поднялся гигантский чихающий кит. Матросы мои струхнули да
-                    попрятались, а я остался на палубе. И кит мне говорит "Не могли бы вы передать носовой платок?". А у
+                    попрятались, а я остался на палубе. И кит мне говорит «Не могли бы вы передать носовой платок?». А у
                     нас
                     такого огромного платка отродясь не было. Ну мы и поснимали паруса, да как начали из них платок киту
                     шить. А
