--- a/story2/page3.html
+++ b/story2/page3.html
@@ -27,8 +27,8 @@
                 пренеприятной
                 встречи с патрулем королевства игрунков, и после лавирования между острыми рифами, и после атаки
                 саблезубых
-                акул Капи-тан вежливо интересовался у Штурмана, "не хочет ли он, сын сухопутной свинки, прокатиться под
-                килем за такие решения" и "какая морская змея его укусила, что он выбрал именно этот маршрут". Каждый
+                акул Капи-тан вежливо интересовался у Штурмана, «не хочет ли он, сын сухопутной свинки, прокатиться под
+                килем за такие решения» и «какая морская змея его укусила, что он выбрал именно этот маршрут». Каждый
                 раз
                 Антон, не теряя уверенности, отвечал, что все идет по плану, и Капи-тану стоило бы поблагодарить его за
                 то,
@@ -61,7 +61,7 @@
                 он
                 увидел кое-что получше: слева по курсу корабля была приколочена небольшая и явно свеженарисованная
                 табличка:
-                "АР-Р-Р-Р-РСТРАЛИЙСКИЙ КАНАЛ! КАРОТКИЙ ПУТЬ ЧЕРИЗ АР-Р-Р-Р-РСТРАЛИЮ! ПРАЕЗД: ВСЕВО 5 ЛАКРИЧНЫХ МАНЕТ!".
+                «АР-Р-Р-Р-РСТРАЛИЙСКИЙ КАНАЛ! КАРОТКИЙ ПУТЬ ЧЕРИЗ АР-Р-Р-Р-РСТРАЛИЮ! ПРАЕЗД: ВСЕВО 5 ЛАКРИЧНЫХ МАНЕТ!».
                 Антон с гордостью вручил Капи-тану трубу и показал свою находку.</p>
 
             <div class="speech">
@@ -76,7 +76,7 @@
                 Капи-тан отдал распоряжение идти на сближение с этим каналом. Вскоре их подхватило течение и они
                 спустили
                 паруса. На въезде в канал стояла большая стеклянная банка с прорезью на крышке. На банке была надпись
-                "МАНЕТКИ СЮДЫ". Внутри она была совершенно пустая.</p>
+                «МАНЕТКИ СЮДЫ». Внутри она была совершенно пустая.</p>
             <div class="speech">
                 <p>НИФЕФО СЕФЕ! ПОФОВЕ МЫ ПЕВЫЕ!</p>
                 <p>Мы не просто первые, Капи-тан, но мы здесь ещё и в первый раз, значит это в каком-то смысле дважды
