--- a/story2/page4.html
+++ b/story2/page4.html
@@ -51,7 +51,7 @@
                 Если всмотреться, можно было увидеть как волна поднимающихся и опускающихся якорей приходит откуда-то
                 из-за
                 горизонта и доходит до последнего корабля в пробке. Но последнего ли? Почувствовав неладное вся команда
-                оглянулась. Сзади к ним приближалось ещё одно судно. "Совершенно точно не пиратский корабль" стал частью
+                оглянулась. Сзади к ним приближалось ещё одно судно. «Совершенно точно не пиратский корабль» стал частью
                 пробки.</p>
 
             <div class="speech">
