--- a/story2/page5.html
+++ b/story2/page5.html
@@ -29,7 +29,7 @@
             <p>С каждым часом пребывания в пробке Капи-тан становился все мрачнее. Стоило ему встретить на палубе
                 зазевавшуюся капибару, как он тут же вцеплялся зубами ей в зад и начинал недовольно бурчать. Жертву он
                 не
-                отпускал, пока не заканчивал свою неразборчивую тираду про "фрофку", "Фафифарина" и "фенфуфалок". Больше
+                отпускал, пока не заканчивал свою неразборчивую тираду про «фрофку», «Фафифарина» и «фенфуфалок». Больше
                 всех, как виновнику происходящего, доставалось Штурману.</p>
 
             <p>К концу второго дня зады всего экипажа уже так болели от укусов, что при появлении Капи-тана все тут же
@@ -38,25 +38,24 @@
                 по
                 канатам наперегонки и настолько затерли карты Доктора, что им пришлось перейти на карты Штурмана. В
                 самый
-                разгар партии, Боцман вдруг издал такой громкий и удивлённый "ОХ!", что все капибары мгновенно
+                разгар партии, Боцман вдруг издал такой громкий и удивлённый «ОХ!», что все капибары мгновенно
                 повернулись
                 на него.</p>
             <div class="speech">
                 <p>Быть того не может, ребятушки, это что ж мы, совсем рядом с островом Черепа.</p>
             </div>
 
-            <p>Антон хотел уточнить у карты так ли это, но карта еще с прошлого раза была им глубоко разочарована и
+            <p>Антон хотел уточнить у карты так ли это, но карта ещё с прошлого раза была им глубоко разочарована и
                 ничего
                 не ответила. Тогда Антон решил самостоятельно найти на карте остров, но быстро сдался и запросил больше
                 подробностей.</p>
 
             <div class="speech">
                 <p>Хм, возможно и так. А что с этим островом, товарищ Боцман?</p>
-                <p>Как это что, пацан! Я же вам тысячу раз рассказывал! Вы что меня не слушали? <span
-                        class="insight"></span>
-                    на этих словах все
-                    капибары
-                    внезапно заинтересовались видом в окне </span> Там ж это... невеста моя живет. Принцесса Нутри,
+                <p>Как это что, пацан! Я же вам тысячу раз рассказывал! Вы что меня не слушали? <span class="insight">
+                        на этих словах все
+                        капибары
+                        внезапно заинтересовались видом в окне </span> Там ж это... невеста моя живет. Принцесса Нутри,
                     не
                     помните что
                     ли?</p>
@@ -78,12 +77,12 @@
                 <p>К бабке своей на дачу хе-хе-хе, <span class="insight"> боцман очень порадовался своей искрометной
                         шутке, </span> К принцессе я
                     попадаю. Она, значит, сидит, плачет, попискивает и совершенно меня не замечает. Я ей такой и говорю
-                    "Ты чего
-                    нюни распустила, кто обидел?". А она, вы представляете, совсем не испугалась и говорит: "Батюшка
+                    «Ты чего
+                    нюни распустила, кто обидел?». А она, вы представляете, совсем не испугалась и говорит: «Батюшка
                     сосватал
                     меня противному старому Бобрявину. А у него зубы все желтые, из пасти воняет тиной, хвост жирный. Не
                     хочу за
-                    него замуж! Вот бы сбежать из этого дворца".</p>
+                    него замуж! Вот бы сбежать из этого дворца».</p>
                 <p>Дружище, а я ведь знаю этого Бобрявина, <span class="insight"> вмешался в рассказ Доктор, </span>
                     Лечил ему несколько раз,
                     хо-хо-хо, подагру.</p>
@@ -91,7 +90,7 @@
                     мухлюет.
                     Ну я и подумал: раз он меня дурит, то и я его надурю. В общем, я принцессу той же ночью из замка-то
                     и
-                    выкрал. На выходе нас поймала стража. Они нам говорят "Стой, бить буду!", а я ему говорю "Ну бей".
+                    выкрал. На выходе нас поймала стража. Они нам говорят «Стой, бить буду!», а я ему говорю «Ну бей».
                     Ну он и
                     ударил <span>Боцман показал лапкой на свой шрам.</span></p>
                 <p>А как же чихающие киты, я думал шрам от них? <span> удивился Антон.</span></p>
@@ -105,9 +104,9 @@
                     туды-сюды,
                     вокруг рифов повилял, и вот мы уже оторвались достаточно, да заехали отдохнуть в порт. Сидимь,
                     значит, пьём
-                    кафу в таверне, на море смотрим, она мне и говорит "Мистер Боцман, путешествовать по морю,
+                    кафу в таверне, на море смотрим, она мне и говорит «Мистер Боцман, путешествовать по морю,
                     оказывается, так
-                    весело! Я бы плавала с вами и плавала!" Тут-то я и понял, к чему она клонит. Говорю ей "Малая, ты ж
+                    весело! Я бы плавала с вами и плавала!» Тут-то я и понял, к чему она клонит. Говорю ей «Малая, ты ж
                     знаешь,
                     что если женщина на корабле, то она либо чья-то жена, либо пассажирка, либо пленница. Пассажиров
                     мы-то
@@ -115,7 +114,7 @@
                     не
                     понимаешь. Давай-ка я тебя отправлю в Ар-р-р-рстралийскую морскую академию поучиться, а потом
                     годиков через
-                    пять заеду за тобой". На том мы с ней и порешили. Я ее, значит, в Ар-р-р-р-рстралию и завез, и с тех
+                    пять заеду за тобой». На том мы с ней и порешили. Я ее, значит, в Ар-р-р-р-рстралию и завез, и с тех
                     пор мы
                     не виделись. Тока слухи до меня долетали, что она с Ар-р-р-р-рстралии зачем-то на остров Черепа
                     перебралась.</p>
