--- a/story2/page6.html
+++ b/story2/page6.html
@@ -55,8 +55,8 @@
 
             <p>Шлюпки были спущены на воду и ловко лавировали между кораблями, застрявшими в огромной неподвижной
                 пробке.
-                Антон, как единственный на корабле эксперт по пробкам, сделал вывод, что "Совершенно точно не пиратский
-                корабль" будет стоять в ней еще как минимум неделю, а значит они могли не слишком торопиться.</p>
+                Антон, как единственный на корабле эксперт по пробкам, сделал вывод, что «Совершенно точно не пиратский
+                корабль» будет стоять в ней еще как минимум неделю, а значит они могли не слишком торопиться.</p>
 
             <p>Через несколько часов шлюпка добралась до пристани. Остров Черепа был совсем небольшим: несколько
                 десятков
