--- a/story2/page7.html
+++ b/story2/page7.html
@@ -26,26 +26,26 @@
         </div>
 
         <div class="page-content">
-            <p>На полках магазина товары лежали в совершенно безумном порядке: рядом с огромным арбузом - отвертки,
+            <p>На полках магазина товары лежали в совершенно безумном порядке: рядом с огромным арбузом — отвертки,
                 слева
-                от них карандаши, а сверху висели соломенные шляпы. Продавца в магазине не было - только мешок, на
+                от них карандаши, а сверху висели соломенные шляпы. Продавца в магазине не было — только мешок, на
                 котором
-                уже знакомым кривым почерком было написано "АПЛАТА СЮДЫ", а рядом с мешком лежал толстый журнал с
+                уже знакомым кривым почерком было написано «АПЛАТА СЮДЫ», а рядом с мешком лежал толстый журнал с
                 надписью
-                "СКОКА СТОИТ".</p>
+                «СКОКА СТОИТ».</p>
 
             <p>Чтобы поскорее найти полироль, было решено разделиться. Боцман пошел обследовать магазин справа, а Антон
                 —
                 слева. Он стал внимательно разглядывать полки в поисках полироли, но его внимание привлекло что-то
                 намного
                 более интересное: в глубокой корзине лежала гора незнакомых ему коричневых мохнатых шаров, а табличка
-                гласила "АР-Р-Р-Р-РСТРАЛИЙСКИЙ АПЕЛЬСИН".</p>
+                гласила «АР-Р-Р-Р-РСТРАЛИЙСКИЙ АПЕЛЬСИН».</p>
 
             <p>То, что на этом острове называлось апельсином <a href="receipt.html"
                     style="text-decoration: none; font-style: normal;">🥥</a> был больше похоже на капибару. Антон
                 сначала удивился, но
                 потом подумал, что если он человек, но сейчас больше похож на капибару, то и апельсин имеет полное право
-                быть больше похожим на капибару, чем на апельсин. "Надо бы купить Доктору" - подумал Антон. Он открыл
+                быть больше похожим на капибару, чем на апельсин. «Надо бы купить Доктору» — подумал Антон. Он открыл
                 журнал, чтобы посмотреть, сколько стоит капибаристый апельсин, пробежался по страницам, нашел нужную и
                 запищал от удивления:</p>
 
@@ -87,7 +87,7 @@
                 что в
                 мешке должно хватить денег и на полироль, и на горстку апельсинов, он взял все, что им было нужно и
                 высыпал
-                "АПЛАТУ" в большой мешок. Потом вытащил из кармана лакричную монету и положил ее поверх кучи арбузных
+                «АПЛАТУ» в большой мешок. Потом вытащил из кармана лакричную монету и положил ее поверх кучи арбузных
                 семечек, чтобы показать этим бедолагам, как на самом деле выглядят настоящие деньги. Но быстро передумал
                 и
                 сунул её обратно в карман.</p>
