--- a/story2/page8.html
+++ b/story2/page8.html
@@ -44,13 +44,13 @@
                     утонченного и доброго создания, <span> щебетала Нутри, пока вела Боцмана прямо к огромной
                         кенгуралке.</span>
                 </p>
-                <p class="khelga">Здравствуйте <span class="insight">хриплым басом прорычала Кенгуралка </span> Вы,
+                <p class="khelga">Здравствуйте <span class="insight">хриплым басом прорычала кенгуралка </span> Вы,
                     должно быть, знаменитый Боцман. Нутри
                     мне
                     про вас все уши прожужжала</p>
             </div>
 
-            <p>Боцман никогда раньше не видел кенгуралок вживую, и более того, считал их выдумкой. Но он, не растерялся
+            <p>Боцман никогда раньше не видел кенгуралок вживую, и более того, считал их выдумкой. Но он не растерялся
                 и
                 вежливо сказал:</p>
 
