--- a/story2/page9.html
+++ b/story2/page9.html
@@ -46,13 +46,13 @@
                 Впрочем, возражать он не стал.</p>
 
             <div class="speech">
-                <p>Это несчастный, нищий капибар. Ему негде жить и у него нет денег даже на один
+                <p>Это несчастный, нищий капибар. Ему негде жить, и у него нет денег даже на один
                     ар-р-р-р-р-р-рстралийский
                     апельсин! А ещё сегодня он пришёл к нам на встречу! Только посмотрите: вот он без сил лежит на
                     диване! <span>
                         лапка Нутри указала на Антона. Тот принял максимально страдальческий вид.</span></p>
-                <p>БЕДНЯГА, <span>ропотала толпа.</span></p>
-                <p>Бедняга! <span> подтвердила Нутри, и положила прямо на Антона небольшой мешочек с "деньгами"</span>
+                <p>БЕДНЯГА, <span>заропотала толпа.</span></p>
+                <p>Бедняга! <span> подтвердила Нутри, и положила прямо на Антона небольшой мешочек с «деньгами»</span>
                 </p>
             </div>
 
@@ -66,7 +66,7 @@
                     оказался?</p>
             </div>
 
-            <p>Антон пригляделся. На листочке был действительно изображен Капи-тан, с абсолютно бандитской ухмылкой
+            <p>Антон пригляделся. На листочке был действительно изображен Капи-тан, с абсолютно бандитской ухмылкой,
                 подбрасывающий в воздух монету. Не успела Нутри начать, как кто-то заорал из толпы:</p>
 
             <div class="speech">
