--- a/story2/receipt.html
+++ b/story2/receipt.html
@@ -34,15 +34,17 @@
             <ul>
                 <li>500 мл кокосовых сливок (молока ар-р-р-р-р-рстралийских апельсинов)</li>
                 <li>1 морковка</li>
-                <li>5-7 махоньких кукурузок. Лучше всего подойдут свежие, но можно взять и маринованны</li>
+                <li>1 кабачок</li>
+                <li>5-7 махоньких кукурузок. Лучше всего подойдут свежие, но можно взять и маринованные</li>
                 <li>2-3 столовые ложки сухой специи карри или половина чайной ложки карри-пасты. Если вы смелы, то можно
-                    больше</li>
+                    даже
+                    больше!</li>
                 <li>соль по вкусу</li>
                 <li>отваренный рассыпчатый рис для гарнира</li>
             </ul>
             </p>
             <p>
-                Чтобы было ещё вкуснее, можно добавить в карри горстку пророщенной сои и какую-нибудь зелень, зелёный
+                Чтобы было ещё вкуснее, можно добавить в карри горстку пророщенной сои, какую-нибудь зелень или зелёный
                 горошек.
             </p>
 
@@ -50,13 +52,13 @@
                 Как готовить:
             <ol>
                 <li>Морковь и лук нарезать полукольцами. Обжарить на сковороде, пока лук не станет золотистым.</li>
-                <li>Нарезать кукурузки на кусочки примерно 2-3 см, положить в сковороду к моркови и луку. Обжарить еще
+                <li>Нарезать кукурузки на кусочки примерно 2-3 см, положить в сковородку к моркови и луку. Обжарить ещё
                     несколько минут.</li>
                 <li>Добавить в сковородку кокосовые сливки, карри и соль. Перемешать. Тушить под крышкой еще примерно 10
                     минут, пока морковь не станет мягкой, но немного хрустящей.</li>
                 <li> Нарезать кабачок полукольцами толщиной примерно 1 см, положить в сковородку к остальным овощам.
                     Тушить вместе 5-6 минут. Кабачок должен оставаться немного хрустящим.
-                    Если хотите, одновременно с цуккини можно добавить соевые бобы, горошек и зелень.</li>
+                    Если хотите, одновременно с кабачком можно добавить соевые бобы, горошек и зелень.</li>
             </ol>
 
             </p>
