--- a/story2/page12.html
+++ b/story2/page12.html
@@ -33,7 +33,7 @@
                 <p class="khelga">Что вы все такие понурые, опять отказались есть? <span>спросила Кхельга.</span></p>
             </div>
 
-            <p>Звери опустили глаза в пол и уже готовились выслушать очередную отповедь. Но в этот момент вперёд вышел
+            <p>Звери опустили глаза и уже готовились выслушать очередную отповедь. Но в этот момент вперёд вышел
                 Боцман.</p>
 
             <div class="speech">
@@ -42,23 +42,23 @@
                 <p>А вот как. <span class="insight"> Боцман приготовился рассказывать очередную невероятную историю,
                     </span> иду я, значит, и вижу
                     двух
-                    эээ... хорьков! Худых что аж рёбра торчат. Подхожу к ним и говорю "Братцы, негоже голодать в такой
+                    эээ... хорьков! Худых что аж рёбра торчат. Подхожу к ним и говорю «Братцы, негоже голодать в такой
                     добрый
-                    день, съешьте по арбузу, всяко лучше будет". А они мне "Да нужны нам твои арбузы, мужик, худым быть
-                    модно".
-                    А им и говорю: "Брат, худым быть совсем не модно. Посмотри на меня, - красивый, сильный, мохнатый. У
+                    день, съешьте по арбузу, всяко лучше будет». А они мне «Да нужны нам твои арбузы, мужик, худым быть
+                    модно».
+                    А им и говорю: «Брат, худым быть совсем не модно. Посмотри на меня — красивый, сильный, мохнатый. У
                     меня в
                     невестах сама принцесса. И душа у меня большая и широкая. Тебе, брат, аж целых два арбуза от всего
                     сердца
                     отдаю. Стал бы я так делать если бы меня было мало? Нужен был бы я принцессе, маленький и
                     малодушный?
                     Подумай, брат, а лучше возьми арбузы, съешь один сам, почувствуй как ты вырос и второй другу своему
-                    отдай".
+                    отдай».
                     Он на меня посмотрел. В глазах его были слезы. Видать он всегда что-то такое подозревал. И как
                     заглотит
-                    арбуз вместе корками и за вторым тянется. А ему говорю, "Нет, брат, это для друга твоего. Ты вырос,
+                    арбуз вместе корками и за вторым тянется. А ему говорю, «Нет, брат, это для друга твоего. Ты вырос,
                     дай и
-                    ему вырасти".</p>
+                    ему вырасти».</p>
                 <p>Слава богу, на этот раз хоть без шрамов обошлось, <span> добавил Антон.</span></p>
             </div>
 
